@@ -1,22 +1,20 @@
 package com.challang.backend.review.service;
 
 import com.challang.backend.global.exception.BaseException;
+import com.challang.backend.liquor.code.LiquorCode;
 import com.challang.backend.liquor.entity.Liquor;
-import com.challang.backend.liquor.entity.LiquorType;
-import com.challang.backend.liquor.repository.LiquorTypeRepository;
-import com.challang.backend.review.dto.request.ReviewCreateRequestDto;
-import com.challang.backend.review.dto.request.ReviewUpdateRequestDto;
-import com.challang.backend.review.dto.response.ReviewResponseDto;
+import com.challang.backend.liquor.repository.LiquorRepository;
+import com.challang.backend.review.dto.request.*;
+import com.challang.backend.review.dto.response.*;
 import com.challang.backend.review.entity.Review;
 import com.challang.backend.review.exception.ReviewErrorCode;
-import com.challang.backend.review.exception.ReviewException;
 import com.challang.backend.review.repository.ReviewRepository;
 import com.challang.backend.user.entity.User;
 import com.challang.backend.user.exception.UserErrorCode;
 import com.challang.backend.user.repository.UserRepository;
-import jakarta.persistence.EntityManager; // EntityManager import
-import jdk.jshell.spi.ExecutionControl;
+import com.challang.backend.util.aws.service.S3Service;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -31,28 +29,30 @@ public class ReviewService {
 
     private final ReviewRepository reviewRepository;
     private final UserRepository userRepository;
-     private final LiquorTypeRepository liquorRepository; // LiquorRepository 의존성 제거
-    private final EntityManager entityManager; // EntityManager 의존성 추가
-    private final LiquorTypeRepository liquorTypeRepository;
+    private final LiquorRepository liquorRepository;
+    private final S3Service s3Service;
+
+    @Value("${cloud.aws.s3.url}")
+    private String s3BaseUrl;
 
     /**
      * 리뷰 생성
      */
-    //TODO : 토큰 받아와서 사용자 찾는 로직 (+유저 탈퇴)
     @Transactional
     public ReviewResponseDto createReview(Long liquorId, ReviewCreateRequestDto request, Long userId) {
         // 1. 사용자 정보 조회
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new BaseException(UserErrorCode.USER_NOT_FOUND, "유저를 찾을 수 없습니다."));
 
-        // 2. Liquor 정보 조회 (임시 프록시 방식 대신 Repository를 사용하는 최종 방식으로 변경)
-        LiquorType liquor = liquorRepository.findById(liquorId)
-                .orElseThrow(() -> new ReviewException(ReviewErrorCode.LIQUOR_NOT_FOUND));
+        // 2. Liquor 정보 조회
+        Liquor liquor = liquorRepository.findById(liquorId)
+                .orElseThrow(() -> new BaseException(LiquorCode.LIQUOR_NOT_FOUND));
 
         // 3. Review 엔티티 생성
         Review review = Review.builder()
                 .writer(user)
                 .liquor(liquor)
+                .imageUrl(request.imageUrl())
                 .content(request.content())
                 .build();
 
@@ -60,7 +60,7 @@ public class ReviewService {
         Review savedReview = reviewRepository.save(review);
 
         // 5. DTO로 변환하여 반환
-        return ReviewResponseDto.from(savedReview);
+        return ReviewResponseDto.from(savedReview, s3BaseUrl);
     }
 
     /**
@@ -69,8 +69,8 @@ public class ReviewService {
     public List<ReviewResponseDto> getReviews(Long liquorId) {
         return reviewRepository.findByLiquorIdOrderByIdDesc(liquorId)
                 .stream()
-                .map(ReviewResponseDto::from)
-                .collect(Collectors.toList());
+                .map(review -> ReviewResponseDto.from(review, s3BaseUrl))
+                .toList();
     }
 
     /**
@@ -80,9 +80,12 @@ public class ReviewService {
     public ReviewResponseDto updateReview(Long reviewId, ReviewUpdateRequestDto request, Long userId) {
         Review review = findReview(reviewId, userId);
 
-        review.updateContent(request.content());
+        if (request.imageUrl() != null && !Objects.equals(review.getImageUrl(), request.imageUrl())) {
+            s3Service.deleteByKey(review.getImageUrl());
+        }
 
-        return ReviewResponseDto.from(review);
+        review.update(request);
+        return ReviewResponseDto.from(review, s3BaseUrl);
     }
 
     /**
@@ -91,18 +94,18 @@ public class ReviewService {
     @Transactional
     public void deleteReview(Long reviewId, Long userId) {
         Review review = findReview(reviewId, userId);
-
+        s3Service.deleteByKey(review.getImageUrl());
         reviewRepository.delete(review);
     }
 
     private Review findReview(Long reviewId, Long userId) {
         // 리뷰 조회
         Review review = reviewRepository.findById(reviewId)
-                .orElseThrow(() -> new ReviewException(ReviewErrorCode.REVIEW_NOT_FOUND));
+                .orElseThrow(() -> new BaseException(ReviewErrorCode.REVIEW_NOT_FOUND));
 
         // 수정/삭제 권한 확인
         if (!Objects.equals(review.getWriter().getUserId(), userId)) {
-            throw new ReviewException(ReviewErrorCode.NO_AUTHORITY_FOR_REVIEW);
+            throw new BaseException(ReviewErrorCode.NO_AUTHORITY_FOR_REVIEW);
         }
 
         return review;
